vmm: api: Add a /api/v1/vm.balloon endpoint
